[58369] chore: code cleanup